<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/activity_main.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:padding="16dp"
    android:gravity="start"
    android:background="#FFDAB9"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grocery_listing"
        android:textSize="24sp"
        android:textColor="@color/purple_700"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/editTextItem"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/item_name"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:autofillHints="Grocery Item" />

    <EditText
        android:id="@+id/editstar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/star_price"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:autofillHints="Star Price"/>

    <EditText
        android:id="@+id/editdmart"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/dmart_price"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:autofillHints="DMart Price"/>

    <EditText
        android:id="@+id/editflipkart"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/flipkart_price"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:autofillHints="Flipkart Price"/>

    <EditText
        android:id="@+id/editbb"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/bb_price"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:autofillHints="BB Price"/>

    <EditText
        android:id="@+id/editTextQty"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/qty"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:autofillHints="Qty"/>

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/add_items"
        android:onClick="addItem"
        android:background="@color/pink"/>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/reset"
        android:onClick="reset"
        android:background="@color/purple_700"
        android:layout_gravity="right"
        android:layout_marginLeft="16dp"
        tools:ignore="RtlHardcoded" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:stretchColumns="*">

        <!-- Header Row -->
        <TableRow>
            <TextView
                android:text="@string/item_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="start"
                android:padding="16sp" />
            <TextView
                android:text="@string/star"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="start"
                android:padding="16sp" />
            <TextView
                android:text="@string/dmart"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="start"
                android:padding="16sp" />
            <TextView
                android:text="@string/flipkart"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="start"
                android:padding="16sp" />
            <TextView
                android:text="@string/quantity"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="start"
                android:padding="16sp" />
        </TableRow>
        <!-- Grocery Items Rows will be dynamically added here -->
    </TableLayout>


    </ScrollView>
</LinearLayout>